# scholar-mcp

./: .gitignore  README.md  pyproject.toml
tests/: test_scholar_mcp.py
tools/: check_bibtex.py  download_paper_text.py  mcp_download_server.py  mcp_scholar_server.py  requirements.txt  semanticscholar.md  semanticscholar.py
